--- a/cross/src/main/java/Config/ServerConfig.json
+++ b/cross/src/main/java/Config/ServerConfig.json
@@ -1,5 +1,6 @@
 {
     "TCPport":20000,
+    "TCPaddress":"0.0.0.0",
     "UDPport":5000,
     "UDPaddress":"230.0.0.1",
     "Userbook":"cross\\src\\main\\java\\JsonUtils\\JsonFiles\\Users.json",
